--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "davejamesmiller/laravel-breadcrumbs": "5.3.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "merujan99/laravel-video-embed": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
